--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
     compile 'com.gelitenight.waveview:waveview:1.0.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
